// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/BaseLayout should render 1`] = `
<SideEffect(DocumentTitle)
  title="BaseLayout Test - Dahl"
>
  <App>
    <BaseLayout__Wrapper>
      <Header />
      <BaseLayout__Main>
        Children
      </BaseLayout__Main>
    </BaseLayout__Wrapper>
  </App>
</SideEffect(DocumentTitle)>
`;

exports[`components/BaseLayout should render a Nav 1`] = `
<SideEffect(DocumentTitle)
  title="BaseLayout Test - Dahl"
>
  <App>
    <BaseLayout__Wrapper>
      <Header
        questionnaire={
          Object {
            "title": "Questionnaire",
          }
        }
      />
      <BaseLayout__NavWrapper>
        <Grid
          align="top"
          fillHeight={false}
        >
          <Column
            cols={12}
            offset={2}
          >
            <withRouter(NavWithoutRouter)
              questionnaire={
                Object {
                  "title": "Questionnaire",
                }
              }
            />
          </Column>
        </Grid>
      </BaseLayout__NavWrapper>
      <BaseLayout__Main>
        Children
      </BaseLayout__Main>
    </BaseLayout__Wrapper>
  </App>
</SideEffect(DocumentTitle)>
`;

exports[`components/BaseLayout should render a title 1`] = `
<SideEffect(DocumentTitle)
  title="BaseLayout Test - Dahl"
>
  <App>
    <BaseLayout__Wrapper>
      <Header />
      <BaseLayout__Main>
        <ScrollPane>
          <BaseLayout__Title>
            Title
          </BaseLayout__Title>
          Children
        </ScrollPane>
      </BaseLayout__Main>
    </BaseLayout__Wrapper>
  </App>
</SideEffect(DocumentTitle)>
`;
